kubernetes/apps/default/parkshield/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parkshield
  namespace: default
  labels:
    app.kubernetes.io/name: parkshield
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: parkshield
  template:
    metadata:
      labels:
        app.kubernetes.io/name: parkshield
    spec:
      containers:
        - name: parkshield
          image: ghcr.io/derlinn/proba-parkshield:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 20
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
