kubernetes/apps/default/parkshield/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: parkshield
  namespace: default
  labels:
    app.kubernetes.io/name: parkshield
spec:
  selector:
    app.kubernetes.io/name: parkshield
  ports:
    - name: http
      port: 80
      targetPort: http
